# mcptrustmap

./: .gitignore  ACCEPTANCE_CRITERIA.md  ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  RUNTIME_PENTEST_PLAN.md  TEST_PLAN.md  pyproject.toml
corpus/real/: adjudication.json
evaluation/: dvmcp.md  study.md
examples/allowlists/: ops.yml
examples/configs/: claude_desktop_config.json  cline_mcp_settings.json  cursor_mcp.json  generic_mcp.json  windsurf_mcp_config.json
examples/manifests/: benign.json  js-vulnerable.json  poisoned.json  vulnerable.json
examples/policies/: intended.yml
scripts/: check_acceptance_matrix.py  record_attack_cassettes.py  record_cassettes.py
src/mcptrustmap/: __init__.py  audit.py  cli.py  commands.py  connect.py  corpus.py  errors.py  findings.py  jsonio.py  models.py  policy.py  reasoning.py  report.py  serve.py  study.py
tests/: conftest.py
tests/acceptance/: test_audit_flow.py  test_corpus_matrix.py  test_hybrid_flow.py  test_study.py
tests/cassettes/: benign_attack.json  dvmcp_attack.json  fixtures.json
tests/fixtures/: benign_mcp_server.py  vuln_mcp_server.py
tests/gate_redteam/: test_redteam.py
tests/unit/: test_arguments_detector.py  test_authority.py  test_authz.py  test_cli_pentest.py  test_cli_surface.py  test_discovery.py  test_dvmcp.py  test_dvmcp_cassette.py  test_dvmcp_live.py  test_gate.py  test_inventory.py  test_live_attack.py  test_manifest.py  test_mismatch.py  test_openai_attack.py  test_oversharing.py  test_poisoning.py  test_precision_recall.py  test_python_ast.py  test_repo_tools.py  (+19 more)
(+91 files in other folders)
